update notebook and requirements

--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -468,6 +468,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss: 1.788, Valid Loss: 1.546363, Accuracy: 0.51\n"
+     ]
     }
    ],
    "source": [
