--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -473,7 +473,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Loss: 1.788, Valid Loss: 1.546363, Accuracy: 0.51\n"
+      "Train Loss: 1.788, Valid Loss: 1.546363, Accuracy: 0.51\n",
+      "Train Loss: 1.686, Valid Loss: 1.380935, Accuracy: 0.63\n",
+      "Train Loss: 1.579, Valid Loss: 1.251940, Accuracy: 0.70\n"
      ]
     }
    ],
