update yml and notebook

--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -476,7 +476,8 @@
       "Train Loss: 1.788, Valid Loss: 1.546363, Accuracy: 0.51\n",
       "Train Loss: 1.686, Valid Loss: 1.380935, Accuracy: 0.63\n",
       "Train Loss: 1.579, Valid Loss: 1.251940, Accuracy: 0.70\n",
-      "Train Loss: 1.476, Valid Loss: 1.148489, Accuracy: 0.74\n"
+      "Train Loss: 1.476, Valid Loss: 1.148489, Accuracy: 0.74\n",
+      "Train Loss: 1.379, Valid Loss: 1.064028, Accuracy: 0.75\n"
      ]
     }
    ],
